--- a/index.html
+++ b/index.html
@@ -14,36 +14,69 @@
             padding: 0;
         }
         .header {
-            font-size: 3rem;
+            font-size: 2.5rem;
             font-weight: bold;
-            margin-top: 50px;
+            margin-top: 30px;
             animation: glow 2s infinite alternate;
+            padding: 10px;
         }
         @keyframes glow {
             from { text-shadow: 0 0 10px #ff4d6d; }
             to { text-shadow: 0 0 20px #ff4d6d, 0 0 30px #ff4d6d; }
         }
         .message {
-            font-size: 1.5rem;
-            margin: 50px auto;
-            padding: 20px;
-            width: 80%;
+            font-size: 1.2rem;
+            margin: 30px auto;
+            padding: 15px;
+            width: 90%;
             background: rgba(255, 255, 255, 0.2);
             border-radius: 15px;
         }
         .footer {
-            font-size: 1.2rem;
-            margin-top: 50px;
+            font-size: 1rem;
+            margin-top: 30px;
+            padding: 10px;
         }
         .hearts {
-            font-size: 2rem;
-            margin-top: 20px;
+            font-size: 1.8rem;
+            margin-top: 15px;
             animation: heartbeat 1.5s infinite;
         }
         @keyframes heartbeat {
             0% { transform: scale(1); }
             50% { transform: scale(1.2); }
             100% { transform: scale(1); }
+        }
+        .surprise {
+            margin-top: 20px;
+        }
+        .button {
+            background-color: #ff4d6d;
+            color: white;
+            padding: 8px 15px;
+            font-size: 1rem;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+        .button:hover {
+            background-color: #ff1e4d;
+        }
+        .hidden-message {
+            display: none;
+            font-size: 1.2rem;
+            margin-top: 15px;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 12px;
+            border-radius: 10px;
+        }
+        @media (max-width: 600px) {
+            .header { font-size: 2rem; }
+            .message { font-size: 1rem; width: 95%; }
+            .footer { font-size: 0.9rem; }
+            .hearts { font-size: 1.5rem; }
+            .button { font-size: 0.9rem; padding: 6px 12px; }
         }
     </style>
 </head>
@@ -62,9 +95,20 @@
         I LOVE YOU TO THE MOON AND BACK! 💕🚀🌙
     </div>
     
+    <div class="surprise">
+        <button class="button" onclick="showMessage()">Click for a Surprise 💝</button>
+        <div id="hidden" class="hidden-message">You're the most special person in my life, and I can't wait to create more beautiful memories with you! 💖</div>
+    </div>
+    
     <audio autoplay loop>
         <source src="your-love-song.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+
+    <script>
+        function showMessage() {
+            document.getElementById('hidden').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
